Fix file content read for java 8